[package]
name = "rust_npm_host"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1" # Check for the latest version
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono", "json"] }
